2011-01-06  Thomas Vander Stichele  <thomas at apestaart dot org>

	* pychecker/checker.py:
	  Make output of NOT PROCESSED UNABLE TO IMPORT report filename
	  similarly to other warnings.
	* test_expected/test58-2.3:
	* test_expected/test77:
	* test_expected/test8:
	* test_expected/test89:
	  Adjust expected output to match.

2011-01-06  Thomas Vander Stichele  <thomas at apestaart dot org>

	* pychecker/warn.py:
	  Add debug output to list number of modules and number of
	  warnings found.

2011-01-05  Thomas Vander Stichele  <thomas at apestaart dot org>

	* pychecker/CodeChecks.py:
	  Add support for opcode 99, DUP_TOPX
	* test/expected/test_DUP_TOPX:
	* test/input/test_DUP_TOPX.py:
	* test/test_pychecker_CodeChecks.py:
	  Add a test for it.

2010-12-29  Thomas Vander Stichele  <thomas at apestaart dot org>

	* pychecker/checker.py:
	  Rework confusing addMethod method such that instead of mixing
	  method and methodName and doing confusing checks and asserts,
	  the name is always passed, and optionally the method.
	  In the third case where it was used, a name was always passed,
	  hence the second argument wasn't even used; so drop it.

2010-12-29  Thomas Vander Stichele  <thomas at apestaart dot org>

	* TODO:
	  Add a TODO item.
	* test/test_pychecker_function.py:
	  Add a unit test for function.Function
	  Add a surprising result for co_varnames for generators.

2010-12-29  Thomas Vander Stichele  <thomas at apestaart dot org>

	* pychecker/checker.py:
	* pychecker/function.py:
	* pychecker/pcmodules.py:
	* pychecker/warn.py:
	  Documentation, comments, and PEP-8.

2010-12-29  Thomas Vander Stichele  <thomas at apestaart dot org>

	* test/test_global.py:
	  Add a test for globals, same as test13.
	* test/input/test_global.py:
	  Test it without and with -g as the test input says.
	* test/expected/test_global:
	* test/expected/test_global_g:
	  Expected outputs in both cases.

2010-12-29  Thomas Vander Stichele  <thomas at apestaart dot org>
